edit package json

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite",
-    "build": "npm install && vite build"
+    "build": "npm install",
+    "dev": "node server"
   },
   "keywords": [],
   "author": "",
