--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^9.2.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "install": "^0.13.0",
+    "npm": "^10.2.5"
   }
 }
